// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CustomFieldName /> should render custom field name 1`] = `
<span>
  
  Field 
  Input field
</span>
`;

exports[`<Preview /> should multiple actions preview 1`] = `
<div
  class="component"
>
  <div
    class="macroData addTagWrapper"
  >
    <strong
      class="text-muted mr-2"
    >
      Add tags:
    </strong>
    <span
      class="badge-tag badge badge-secondary"
    >
      refund
    </span>
    <span
      class="badge-tag badge badge-secondary"
    >
      billing
    </span>
    <span
      class="badge-tag badge badge-secondary"
    >
      refund accepted
    </span>
  </div>
  <div
    class="macroData"
  >
    <strong
      class="text-muted mr-2 align-middle"
    >
      Send internal note:
    </strong>
    <span
      class="material-icons mr-2 icon internalNoteIcon"
    >
      note
    </span>
    <span
      class="internalNote"
    >
      Add internal note
    </span>
  </div>
</div>
`;

exports[`<Preview /> should render backend action preview 1`] = `
<div
  class="component"
>
  <div
    class="macroData"
  >
    <strong
      class="text-muted mr-2 align-middle"
    >
      Send internal note:
    </strong>
    <span
      class="material-icons mr-2 icon internalNoteIcon"
    >
      note
    </span>
    <span
      class="internalNote"
    >
      Add internal note
    </span>
  </div>
</div>
`;

exports[`<Preview /> should render setCustomFieldValue actions preview 1`] = `
<div
  class="component"
>
  <div
    class="macroData"
  >
    <strong
      class="text-muted mr-2"
    >
      <span>
        
        Field 
        Input field
      </span>
      :
    </strong>
    <b
      class="integrationAction"
    >
      Custom field value
    </b>
  </div>
  <div
    class="macroData"
  >
    <strong
      class="text-muted mr-2"
    >
      <span>
        
        Field 
        Input field
      </span>
      :
    </strong>
    <b
      class="integrationAction"
    >
      Custom field value
    </b>
  </div>
</div>
`;

exports[`<Preview /> should render simple action preview 1`] = `
<div
  class="component"
>
  <div
    class="macroData addTagWrapper"
  >
    <strong
      class="text-muted mr-2"
    >
      Add tags:
    </strong>
    <span
      class="badge-tag badge badge-secondary"
    >
      refund
    </span>
    <span
      class="badge-tag badge badge-secondary"
    >
      billing
    </span>
    <span
      class="badge-tag badge badge-secondary"
    >
      refund accepted
    </span>
  </div>
</div>
`;
